# problems_ads

./: .gitignore  README.md  conftest.py  pyproject.toml  test_contests.py
problems/codeforces_101879_tea/: case_15_in_32767.in  case_15_in_32767.out  case_2_in_6.out  case_4_in_15.out  case_small1.out  codeforces_101879_tea.py  readme.md
problems/codeforces_115_party/: codeforces_115_party.py  readme.md
problems/codeforces_1184_the_doctor/: codeforces_1184_the_doctor.py  readme.md  sample.out
problems/codeforces_1490_perm_transf/: codeforces_1490_perm_transf.py  codeforces_1490_perm_transf_dp.py  complex.in  complex.out  readme.md
problems/kattis_ferryloading4/: kattis_ferryloading4.py  kattis_ferryloading4_own_ds.py  readme.md
problems/oj_10172_lonesome_cargo/: debug.in  oj_10172_lonesome_cargo.py  readme.md  simple.in
problems/oj_1062_containers/: oj_1062_containers.py  readme.md
problems/oj_336_a_node_too_far/: oj_336_a_node_too_far.py  readme.md  sample.in
problems/unicamp_olimp/: readme.md  unicamp_olimp.cpp  unicamp_olimp.py
problems/uri_1030_flavius_josephhus/: readme.md  sample.in  uri_1030_flavius_josephhus.py
problems/uri_1062_trilhos/: complex.in  readme.md  sample.out  simple.in  uri_1062_trilhos.py
problems/uri_1076_des_labirintos/: readme.md  uri_1076_des_labirintos.py
problems/uri_1194_prefix_infix_posfix/: uri_1194_prefix_infix_posfix.md  uri_1194_prefix_infix_posfix_interative.py
problems/uri_1442_desvio_rua/: readme.md  sample.in  sample.out  uri_1442_desvio_rua.py
problems/uri_1523_linear_parking/: complex.in  complex.out  (+4 more)
(+11 files in other folders)
