[tool.poetry]
name = "code-contests"
version = "0.1.0"
description = "My solutions to code-contests."
authors = ["Fernando Macedo <fgmacedo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-watch = "^4.2.0"
pytest-benchmark = "^3.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
